# ai_cow

./: .gitignore  CMakeLists.txt
include/core/: Application.hpp  Config.hpp  Logger.hpp
include/hardware/: SerialPort.hpp
include/monitoring/: SystemMonitor.hpp  ThermalMonitor.hpp
include/network/: MessageHandler.hpp  SignalingProtocol.hpp  WebRTCManager.hpp  WebRTCPeer.hpp  WebSocketClient.hpp
include/utils/: Base64.hpp  CircularBuffer.hpp  CommandExecutor.hpp  FileWatcher.hpp  Performance.hpp  RateLimiter.hpp  SafeQueue.hpp  Singleton.hpp  StringUtils.hpp  ThreadPool.hpp  Timer.hpp
include/video/: EventRecorder.hpp  Pipeline.hpp  PipelineBuilder.hpp  StreamManager.hpp  VideoProcessor.hpp
src/: main.cpp
src/core/: Application.cpp  Config.cpp  Logger.cpp
src/hardware/: SerialPort.cpp
src/monitoring/: SystemMonitor.cpp  ThermalMonitor.cpp
src/network/: MessageHandler.cpp  SignalingProtocol.cpp  WebRTCManager.cpp  WebRTCPeer.cpp  WebSocketClient.cpp
src/utils/: CommandExecutor.cpp  FileWatcher.cpp  Performance.cpp  ThreadPool.cpp
src/video/: EventRecorder.cpp  Pipeline.cpp  StreamManager.cpp  VideoProcessor.cpp
tests/: CMakeLists.txt
